--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
+    "@mui/lab": "^7.0.1-beta.20",
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^8.9.2",
     "@radix-ui/react-collapsible": "^1.1.2",
