--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "moment": "^2.30.1",
     "mui-one-time-password-input": "^3.0.2",
+    "number-to-words": "^1.2.4",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
@@ -41,6 +42,7 @@
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.3",
     "rimraf": "^6.0.1",
     "sass": "^1.83.1",
@@ -53,6 +55,7 @@
     "@eslint/js": "^9.17.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.5",
+    "@types/number-to-words": "^1.2.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
